[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbflingr"
version = "1.0.0"
authors = [
  { name="11bunno11", email="11bunno11@gmail.com" },
]
description = "Packaged curl for flinging URLs to instances via /.well-known/ternbook.json"
requires-python = ">=3.11"
readme = { file = "README.md", content-type = "text/markdown" }
license = "AGPL-3.0-or-later"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Utilities"
]

[project.scripts]
tbflingr = "tbflingr.cli:main"

[project.urls]
Homepage = "https://github.com/11bunno11/tbflingr"

[tool.setuptools.packages.find]
where = ["."]
include = ["tbflingr*"]
