[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tbflingr"
version = "1.0.0"
description = "Packaged curl for flinging URLs to instances via /.well-known/ternbook.json"
requires-python = ">=3.11"
readme = "README.md"
long_description_content_type = "text/markdown"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    ...
]

[project.scripts]
tbflingr = "tbflingr.cli:main"

[project.urls]
Homepage = "https://github.com/11bunno11/tbflingr"

[tool.setuptools.packages.find]
where = ["."]
include = ["tbflingr*"]
